// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-cost-estimation - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Estimate Azure deployment costs before provisioning by analyzing Bicep and ARM templates. Use this skill when users want to understand infrastructure costs, compare pricing across regions, analyze template costs before deployment, or optimize Azure spending. Supports VMs, Storage, SQL Database, App Service, AKS, Container Apps, and more.",
  "extractedKeywords": [
    "across",
    "analyze",
    "analyzing",
    "app service",
    "apps",
    "authentication",
    "azure",
    "before",
    "bicep",
    "cli",
    "compare",
    "container",
    "cost",
    "costs",
    "database",
    "deploy",
    "deployment",
    "estimate",
    "estimation",
    "function",
    "infrastructure",
    "key vault",
    "keyvault",
    "kubernetes",
    "monitor",
    "more",
    "networking",
    "optimize",
    "pricing",
    "provisioning",
    "regions",
    "service",
    "skill",
    "spending",
    "sql",
    "storage",
    "supports",
    "template",
    "templates",
    "this",
    "understand",
    "users",
    "want",
    "when",
  ],
  "name": "azure-cost-estimation",
}
`;

exports[`azure-cost-estimation - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "across",
  "analyze",
  "analyzing",
  "app service",
  "apps",
  "authentication",
  "azure",
  "before",
  "bicep",
  "cli",
  "compare",
  "container",
  "cost",
  "costs",
  "database",
  "deploy",
  "deployment",
  "estimate",
  "estimation",
  "function",
  "infrastructure",
  "key vault",
  "keyvault",
  "kubernetes",
  "monitor",
  "more",
  "networking",
  "optimize",
  "pricing",
  "provisioning",
  "regions",
  "service",
  "skill",
  "spending",
  "sql",
  "storage",
  "supports",
  "template",
  "templates",
  "this",
  "understand",
  "users",
  "want",
  "when",
]
`;
